// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticLookupFormatEditor should render multiple lookup entries and unknown key value 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": <FormattedMessage
            defaultMessage="Key"
            id="indexPatternFieldEditor.staticLookup.keyLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": <FormattedMessage
            defaultMessage="Value"
            id="indexPatternFieldEditor.staticLookup.valueLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "data-test-subj": "staticLookupEditorRemoveEntry",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "actions",
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
        Object {
          "index": 1,
        },
        Object {
          "index": 2,
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    responsive={true}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    data-test-subj="staticLookupEditorAddEntry"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add entry"
      id="indexPatternFieldEditor.staticLookup.addEntryButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Value for unknown key"
        id="indexPatternFieldEditor.staticLookup.unknownKeyLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      data-test-subj="staticLookupEditorUnknownValue"
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value="test value"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`StaticLookupFormatEditor should render normally 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": <FormattedMessage
            defaultMessage="Key"
            id="indexPatternFieldEditor.staticLookup.keyLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": <FormattedMessage
            defaultMessage="Value"
            id="indexPatternFieldEditor.staticLookup.valueLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "data-test-subj": "staticLookupEditorRemoveEntry",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "actions",
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    responsive={true}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    data-test-subj="staticLookupEditorAddEntry"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add entry"
      id="indexPatternFieldEditor.staticLookup.addEntryButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Value for unknown key"
        id="indexPatternFieldEditor.staticLookup.unknownKeyLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      data-test-subj="staticLookupEditorUnknownValue"
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value=""
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;
